# ProjectLesson9.2

./: README.md  main.py  pyproject.toml  test1.py  test2.py  test3.py
data/: names.txt  names2.txt
